--- a/mystyle.css
+++ b/mystyle.css
@@ -1,51 +1,52 @@
-<style>
-  .foto-perfil {
-    height: 100%;
-    width:auto;
-    max-width: 100%;
-    border-radius: 50%;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+.foto-perfil {
+  height: 100%;
+  width:auto;
+  max-width: 100%;
+  border-radius: 50%;
 }
-  .corPrimaria {
-    background-color: #18bc9c;
-  }
-  .corSecundaria {
-    background-color: #2c3e50;
-  }
-  p {
-    font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif ;
-    color: black !important;
-  }
-  .icones{
-    padding-left: 5px;
-  }
-  .titulosBrancos{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: white
-  }
-  .titulosVerdes{
-    text-decoration: underline;
-    text-underline-position: below;
-    padding-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color:#18bc9c
-  }
-  .textoBranco{
-    color: white !important
-  }
-  .jumbotron{
-    margin-bottom: 0px;
-  }
-  .textoFooter{
-    margin: 0px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-</style>
+.corPrimaria {
+  background-color: #0f856d;
+}
+.corSecundaria {
+  background-color: #2c3e50;
+}
+p {
+  font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif ;
+  color: black !important;
+}
+.icones{
+  padding-left: 5px;
+}
+.titulosBrancos{
+  text-decoration: underline;
+  text-underline-position: below;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: white
+}
+.titulosVerdes{
+  text-decoration: underline;
+  text-underline-position: below;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color:#0f856d
+}
+.textoBranco{
+  color: white !important
+}
+.jumbotron{
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+.textoFooter{
+  margin: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+html {
+  scroll-behavior: smooth;
+}
